--- a/ProyectoModelos/nbproject/project.properties
+++ b/ProyectoModelos/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoModelos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jxl.jar=jxl.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jxl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
