--- a/ProyectoModelos/nbproject/project.properties
+++ b/ProyectoModelos/nbproject/project.properties
@@ -29,11 +29,15 @@ dist.jar=${dist.dir}/ProyectoModelos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.17.jar=jcommon-1.0.17.jar
+file.reference.jfreechart-1.0.14.jar=jfreechart-1.0.14.jar
 file.reference.jxl.jar=jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jxl.jar}
+    ${file.reference.jxl.jar}:\
+    ${file.reference.jcommon-1.0.17.jar}:\
+    ${file.reference.jfreechart-1.0.14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
